# pipelines_rj_sme

./: Dockerfile  README.md  openssl.cnf  pyproject.toml
.github/workflows/scripts/: metadata_automation.py
pipelines/: constants.py  flows.py
pipelines/brutos_core_sso/: __init__.py
pipelines/brutos_core_sso/dump_db/: flows.py  schedules.py
pipelines/dbt_transform/: flows.py  schedules.py
pipelines/educacao_basica/: __init__.py
pipelines/educacao_basica/dump_db/: flows.py  schedules.py
pipelines/educacao_basica/dump_url/: __init__.py  flows.py  schedules.py
pipelines/educacao_basica_avaliacao/: __init__.py
pipelines/educacao_basica_avaliacao/dbt/: flows.py  schedules.py  utils.py
pipelines/educacao_basica_frequencia/: __init__.py
pipelines/educacao_basica_frequencia/dump_db/: flows.py  schedules.py
pipelines/educacao_basica_frequencia/materialize/: flows.py  schedules.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/templates/: __init__.py
pipelines/templates/run_dbt_model/: flows.py
queries/: .gitignore  dbt_project.yml  metadata.json  profiles.yml
queries/models/brutos_core_sso/: _brutos_gestao_escolar_rh__sources.yml
queries/models/brutos_gestao_escolar/: _brutos_gestao_escolar__schema.yml  _brutos_gestao_escolar__source.yml  _schema.yml  _source.yml  brutos_gestao_escolar__aluno_avaliacao_turma.sql  brutos_gestao_escolar__aluno_curriculo.sql  brutos_gestao_escolar__aluno_historico_completo.sql  brutos_gestao_escolar__aluno_justificativa_falta.sql  brutos_gestao_escolar__avaliacao.sql  brutos_gestao_escolar__esc_escola.sql  (+17 more)
(+66 files in other folders)
